loan listing header gap fixed

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -341,6 +341,12 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   font-size: 14px;
 }
 
+/*-- Dec Changes Fateh --*/
+.long-form .long-form-wrapper,
+.c-detail-page .combined-wrapper .banner .banner-wrapper {
+  padding-top: 80px;
+}
+
 @media(max-width: 1199px) {
   .banks h2 strong:nth-child(2) {
     display: block;
