--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5567,7 +5567,7 @@ h1, h2, h3, h4, h5, h6, b, span, strong, a {
 }
 
 .c-detail-page .combined-wrapper .banner .banner-wrapper {
-  padding-top: 128px;
+  /* padding-top: 128px; */
   padding-bottom: 64px;
   max-width: 395px;
   margin-left: 0;
@@ -5728,7 +5728,7 @@ h1, h2, h3, h4, h5, h6, b, span, strong, a {
   margin: 0 auto;
   padding-left: 24px;
   padding-right: 24px;
-  padding-top: 128px;
+  /* padding-top: 128px; */
   margin-bottom: 128px;
   z-index: 9999;
 }
